[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/spritesheet_charge.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Scripts/Score.gd" type="Script" id=5]
[ext_resource path="res://Themes/Scribble_Theme.tres" type="Theme" id=6]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1800, 300, 300 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1500, 300, 300 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1200, 300, 300 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 900, 300, 300 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 600, 300, 300 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 300, 300 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "rainbow_grad"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.588235 ), Color( 1, 0.447059, 0, 0.588235 ), Color( 1, 0.960784, 0, 0.588235 ), Color( 0.101961, 1, 0, 0.588235 ), Color( 0, 1, 0.905882, 0.588235 ), Color( 0, 0.345098, 1, 0.588235 ), Color( 0.478431, 0, 1, 0.588235 ), Color( 1, 0, 0.772549, 0.588235 ), Color( 1, 0, 0, 0.588235 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "inverted_rainbow"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.905882, 1 ), Color( 0, 0.345098, 1, 1 ), Color( 0.478431, 0, 1, 1 ), Color( 1, 0, 0.772549, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.447059, 0, 1 ), Color( 1, 0.960784, 0, 1 ), Color( 0.101961, 1, 0, 1 ), Color( 0, 1, 0.905882, 1 ) ]
}

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["must_survive"]]
pause_mode = 2
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 3.41333, 2 )
frames = SubResource( 10 )

[node name="Label" type="Label" parent="." groups=["must_survive"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
text = "OVERLOAD ! ! !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="." groups=["must_survive"]]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
root_node = NodePath("../..")
playback_speed = 0.5
anims/rainbow_grad = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 450 )

[node name="BossSpawn" type="Position2D" parent="."]
position = Vector2( 512, 170 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_right = 256.0
margin_bottom = 60.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Score"]

[node name="Overload" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
z_index = 1
points = PoolVector2Array( 256, 550, 768, 550 )
width = 20.0
default_color = Color( 0.321569, 0.321569, 0.321569, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Charge" type="Line2D" parent="."]
z_index = 1
points = PoolVector2Array( 256, 550, 256, 550 )
default_color = Color( 0, 1, 0.905882, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Charge"]
playback_speed = 0.5
anims/inverted_rainbow = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, 0, 600, 0, 16, -16, 16, -16, 616, 1040, 616, 1040, -16, 0, -16 )

[connection signal="overload" from="." to="." method="_on_Game_overload"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="player_hit" from="Player" to="." method="_on_Player_player_hit"]
[connection signal="timeout" from="Score/Timer" to="Score" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Charge/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
